# SearchSECOSpider

./: .gitignore  .gitlab-ci.yml  README.md  SearchSECOSpider.sln  Spider-Revisited.sln
.github/workflows/: testing.yml
SearchSECOSpider/: CMakeLists.txt  main.cpp
Spider-Revisited/: CMakeLists.txt  CodeBlock.h  Error.cpp  Error.h  ErrorSpider.cpp  ErrorSpider.h  ExecuteCommand.cpp  ExecuteCommand.h  Filesystem.cpp  Filesystem.h  Git.cpp  Git.h  GitSpider.cpp  GitSpider.h  Logger.cpp  Logger.h  RunSpider.cpp  RunSpider.h  Spider-Revisited.vcxproj  Spider-Revisited.vcxproj.filters  Spider.cpp  Spider.h
Spider-Tests/: CMakeLists.txt  ExecuteCommandMock.h  ExecuteCommand_test.cpp  Git_test.cpp  Gitspider_test.cpp  Integration_test.cpp  Mock_test.cpp  Spider-Tests.vcxproj  parseBlameTestData.h  pch.cpp  test.cpp  testMocks.cpp  testMocks.h
Standalone/: Standalone.vcxproj  main.cpp
libSearchSECOSpider/: CMakeLists.txt  CodeBlock.h  ErrorSpider.cpp  ErrorSpider.h  ExecuteCommand.cpp  ExecuteCommand.h  Filesystem.cpp  Filesystem.h  Git.cpp  Git.h  GitSpider.cpp  GitSpider.h  Logger.cpp  Logger.h  RunSpider.cpp  RunSpider.h  Spider.cpp  Spider.h
tests/: CMakeLists.txt  ExecuteCommandMock.h  ExecuteCommand_test.cpp  Git_test.cpp  Gitspider_test.cpp  Integration_test.cpp  Mock_test.cpp  parseBlameTestData.h  pch.h  testMocks.cpp  testMocks.h
vsProjects/: SearchSECOSpider.vcxproj  SearchSECOSpider.vcxproj.filters  libSearchSECOSpider.vcxproj  libSearchSECOSpider.vcxproj.filters  packages.config  tests.vcxproj
